content/docs/v2020.10.30/reference/azurerm.kubeform.com/CosmosdbMongoDatabase.md
---
title: CosmosdbMongoDatabase
menu:
  docs_v2020.10.30:
    identifier: cosmosdbmongodatabase-azurerm.kubeform.com
    name: CosmosdbMongoDatabase
    parent: azurerm.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## CosmosdbMongoDatabase
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `azurerm.kubeform.com/v1alpha1` |
|    `kind` | string | `CosmosdbMongoDatabase` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[CosmosdbMongoDatabaseSpec](#cosmosdbmongodatabasespec)***||
| `status` | ***[CosmosdbMongoDatabaseStatus](#cosmosdbmongodatabasestatus)***||
## CosmosdbMongoDatabaseSpec

Appears on:[CosmosdbMongoDatabase](#cosmosdbmongodatabase), [CosmosdbMongoDatabaseStatus](#cosmosdbmongodatabasestatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `accountName` | ***string***||
| `name` | ***string***||
| `resourceGroupName` | ***string***||
| `throughput` | ***int64***| ***(Optional)*** |
## CosmosdbMongoDatabaseStatus

Appears on:[CosmosdbMongoDatabase](#cosmosdbmongodatabase)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[CosmosdbMongoDatabaseSpec](#cosmosdbmongodatabasespec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[CosmosdbMongoDatabaseStatus](#cosmosdbmongodatabasestatus)

---
